--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Mohamed Bounouar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      html, body {
+        margin: 0;
+        height: 100%;
+      }
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+    </style>
   </head>
-  <body style="margin:0">
-    <iframe src="https://mohamed-bounouar-7c653b7.gamma.site/" style="border:none;width:100vw;height:100vh;"></iframe>
+  <body>
+    <iframe src="https://mohamed-bounouar-7c653b7.gamma.site/"></iframe>
   </body>
 </html>
